--- a/styles/main.css
+++ b/styles/main.css
@@ -11,6 +11,13 @@
   box-shadow: 0px 2px 3px #ececec;
   background: #fff;
 }
+.welcome{
+  display: block;
+  text-align: center;
+  font-size: 16px;
+  font-family: '微软雅黑';
+  margin-top: 10px;
+}
 .list {
   padding: 0 60px;
 }
