--- a/styles/main.css
+++ b/styles/main.css
@@ -5,6 +5,11 @@
   font-size: 22px;
   font-family: '微软雅黑';
 }
+.audio{
+  display: block;
+  margin: 15px auto 0;
+
+}
 .shadow {
   border: 1px solid #e6e6e6;
   border-radius: 5px;
