--- a/styles/main-minwidth1200.css
+++ b/styles/main-minwidth1200.css
@@ -12,14 +12,7 @@
   background: #fff;
 }
 .wrap span{
-  position: absolute;
-  bottom: 5px;
-  right: 5px;
-  padding:5px 5px;
-  background: lightblue;
-  border-radius: 10px;
-  font:10px '微软雅黑' sans-serif;
-  cursor: pointer;
+  display: none;
 }
 #showDemo{
   display: none !important;
