--- a/styles/main-preview.css
+++ b/styles/main-preview.css
@@ -1,9 +1,11 @@
 .wrap {
-  position: relative;
-  width: 500px;
-  margin: 20px auto 36px;
-  padding: 40px 20px;
+  position: absolute;
+  width: 400px;
+  top: 20px;
+  left: 20px;
+  padding: 20px 0 20px;
   font:18px '微软雅黑' sans-serif;
+  margin-bottom: 36px;
 }
 .shadow {
   border: 2px solid #e6e6e6;
@@ -16,13 +18,17 @@
   bottom: 5px;
   right: 5px;
   padding:5px 5px;
-  background: lightblue;
+  background: lightgray;
   border-radius: 10px;
   font:10px '微软雅黑' sans-serif;
   cursor: pointer;
 }
 #showDemo{
-  display: none !important;
+  position: fixed;
+  top: 20px;
+  left:450px;
+  right: 20px;
+  height: 520px;
 }
 .welcome{
   position: fixed;
@@ -33,7 +39,7 @@
   font: 16px/2 '微软雅黑' sans-serif;
 }
 .list {
-  padding: 0 50px;
+  padding: 0 15px;
 }
 .list li {
   list-style: none;
