--- a/styles/main-preview.css
+++ b/styles/main-preview.css
@@ -24,6 +24,24 @@
     padding: 20px 0 20px;
   }
 }
+.wrap:before,.wrap:after{
+  position: absolute;
+  content: "";
+  left: 100%;
+  width: 0;
+  height: 0;
+  border: solid transparent;
+}
+.wrap:before{
+  border-left-color:#e6e6e6;
+  border-width: 12px;
+  top:18px;
+}
+.wrap:after{
+  border-left-color: #fff;
+  border-width: 10px;
+  top: 20px;
+}
 .shadow {
   border: 2px solid #e6e6e6;
   border-radius: 5px;
